778 - Custom sync profile names, etc.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -143,21 +143,37 @@ dialog.binderror=Unable to bind port\!
 dialog.connect.connecting=Connecting
 dialog.connect.connecting_to=Connecting to {0}...
 dialog.connection_problem=Connection problem
-dialog.customsync.autodownloadfromfriends=Autodownload from friends
-dialog.customsync.autodownloadfromother=Autodownload from others
-dialog.customsync.changedetection_disabled=Change detection disabled
-dialog.customsync.dailySync=Daily synchronization
-dialog.customsync.everyDay=Every day
-dialog.customsync.hourDaySync=Hour / day of synchronization
-dialog.customsync.regularSync=Regular synchronization
-dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
-dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
-dialog.customsync.syncprofilescombo=Default synchronization profile
-dialog.customsync.text=Select default and / or customize synchronization profile
-dialog.customsync.timebetweenscans=(Maximum) time until change detection
-dialog.customsync.title=Choose synchronization profile
-dialog.customsync.weekdays=Weekdays
-dialog.customsync.weekends=Weekends
+dialog.create_edit_profile.duplicate_profile_title=Duplicate profile
+dialog.create_edit_profile.cannot_save_name=This profile cannot be saved because\nthere is already a profile named {0}
+dialog.create_edit_profile.cannot_save_profile=This profile cannot be saved because\nit is identical to profile {0}
+dialog.create_edit_profile.auto_download_from_friends=Autodownload from friends
+dialog.create_edit_profile.auto_download_from_other=Autodownload from others
+dialog.create_edit_profile.change_detection_disabled=Change detection disabled
+dialog.create_edit_profile.configure.key=C
+dialog.create_edit_profile.configure.name=Configure
+dialog.create_edit_profile.configure_from=Configure from an existing profile
+dialog.create_edit_profile.create_button.description=Create a custom profile
+dialog.create_edit_profile.create_button.key=C
+dialog.create_edit_profile.create_button.name=Create
+dialog.create_edit_profile.daily_sync=Daily synchronization
+dialog.create_edit_profile.delete_button.description=Delete this profile
+dialog.create_edit_profile.delete_button.key=D
+dialog.create_edit_profile.delete_button.name=Delete
+dialog.create_edit_profile.edit_button.description=Edit this profile
+dialog.create_edit_profile.edit_button.key=E
+dialog.create_edit_profile.edit_button.name=Edit
+dialog.create_edit_profile.every_day=Every day
+dialog.create_edit_profile.hour_day_sync=Hour / day of synchronization
+dialog.create_edit_profile.profile_name=Profile name
+dialog.create_edit_profile.regular_sync=Regular synchronization
+dialog.create_edit_profile.sync_deletion_with_friends=Synchronize deletion with friends
+dialog.create_edit_profile.sync_deletion_with_others=Synchronize deletion with others
+dialog.create_edit_profile.time_between_scans=(Maximum) time until chage detection
+dialog.create_edit_profile.title_create=Create custom synchronization profile
+dialog.create_edit_profile.title_edit=Edit custom synchronization profile
+dialog.create_edit_profile.weekdays=Weekdays
+dialog.create_edit_profile.weekends=Weekends
+dialog.delete_profile.title=Delete custom synchronization profile
 dialog.directorychooser.new.description=New directory
 dialog.directorychooser.new.exists={0}\nalready exists
 dialog.directorychooser.new.key=N
@@ -169,6 +185,11 @@ dialog.fatalerror.title=Fatal Error
 dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
 dialog.newdirectorycreator.title=New directory
 dialog.synchronization.choose=Please choose your sync action
+dialog.synchronization.duplicate.delete=Deleting this profile will affect all these folders.
+dialog.synchronization.duplicate.edit=Editing this profile will affect all these folders.
+dialog.synchronization.duplicate.more=more
+dialog.synchronization.duplicate.title=Duplicate use
+dialog.synchronization.duplicate.use=This profile is used by the following folders:
 dialog.synchronization.receive_changes=Receive changes
 dialog.synchronization.send_and_receive_changes=Publish and receive changes
 dialog.synchronization.send_own_changes=Publish own changes
@@ -452,6 +473,7 @@ general.continue=Continue
 general.continue.key=C
 general.days={0} days
 general.delete=Delete
+general.delete.key=D
 general.description=Description
 general.directory=Directory
 general.disconnected=Disconnected
@@ -491,10 +513,10 @@ general.overwrite_all=Overwrite all
 general.powerfolder=PowerFolder
 general.preview_folder=Preview folder
 general.recyclebin=Recycle Bin
-general.reject=Reject
+general.save=Save
+general.save.key=S
 general.saturday=Saturday
 general.seconds=Second(s)
-general.show=show
 general.size=Size
 general.skip=Skip
 general.sunday=Sunday
@@ -504,7 +526,6 @@ general.time=%02d\:%02d\:%02d
 general.today=today
 general.tuesday=Tuesday
 general.uploads=Uploads
-general.user=User
 general.webservice=Online Storage
 general.wednesday=Wednesday
 general.what_is_this=What is this?
@@ -690,6 +711,7 @@ preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folde
 preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Dialogs
 preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
+preferences.dialog.dialogs.warn_on_duplicate_folders=Warn if changing a profile for multiple folders
 preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
 preferences.dialog.dialogs.warnonlowmemory=Warn on low available memory
 preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filename problems (e.g. too long for Apple classic)
@@ -990,6 +1012,7 @@ synchronisation.warning.explanation=You have selected synchronization profile '{
 synchronisation.warning.title=Activate synchronization profile {0} for {1}
 
 syncprofile.autodownload_all.name=Auto-download
+syncprofile.autodownload_friends.name=Auto-download friends
 syncprofile.backupsource.name=Backup (Source)
 syncprofile.backuptarget.name=Backup (Target)
 syncprofile.custom.name=Custom profile
@@ -1061,7 +1084,7 @@ unignorefile.name=Remove from Ignore pattens
 
 sync_folder_rights.name=Preview all folders
 sync_folder_rights.key=S
-sync_folder_rights.description=Syncs the folder memberships with own account. Adds available PowerFolder to the preview. 
+sync_folder_rights.description=Syncs the folder memberships with own account. Adds available PowerFolder to the preview.
 
 user.dir.contacts=Contacts
 user.dir.custom=Custom
@@ -1175,10 +1198,10 @@ preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts
 preferences.dialog.swarming.internet=Use swarming downloads on the Internet
 preferences.dialog.swarming.internet.tooltip=Enable downloads from multiple sources coming from the Internet
 preferences.dialog.swarming.lan=Use swarming downloads on LAN
-preferences.dialog.swarming.lan.tooltip=Enable downloads from multiple sources in LAN 
+preferences.dialog.swarming.lan.tooltip=Enable downloads from multiple sources in LAN
 
 dialog.binderror.option.title=Port binding error!
-dialog.binderror.option.text=Unable to bind on specified port(s)!\nAn bound port is required for PowerFolder to\nreceive incoming connections. 
+dialog.binderror.option.text=Unable to bind on specified port(s)!\nAn bound port is required for PowerFolder to\nreceive incoming connections.
 dialog.binderror.option.ignore=Continue
 dialog.binderror.option.exit=Exit PowerFolder
 
