--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src/jd3lib"/>
 	<classpathentry kind="src" path="src/etc"/>
-	<classpathentry kind="src" path="src/systray"/>
 	<classpathentry kind="src" path="src/jwf"/>
 	<classpathentry kind="src" path="src/test"/>
 	<classpathentry kind="src" path="src/main"/>
@@ -10,6 +9,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang-2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-cli-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/uif_lite-2.0.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jdic.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="lib/binding-2.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/forms-1.1.0.jar"/>
