#863 - Ignore / Unignore multiselections

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -31,7 +31,6 @@ aborttransfer.description=Aborts the selected transfer
 aborttransfer.key=a
 aborttransfer.name=Abort Transfer(s)
 
-general.more=More
 about.description=Shows information about PowerFolder
 about.dialog.check_for_updates=Check For Updates
 about.dialog.check_for_updates.key=U
@@ -187,7 +186,6 @@ dialog.newdirectorycreator.title=New directory
 dialog.synchronization.choose=Please choose your sync action
 dialog.synchronization.duplicate.delete=Deleting this profile will affect all these folders.
 dialog.synchronization.duplicate.edit=Editing this profile will affect all these folders.
-dialog.synchronization.duplicate.more=more
 dialog.synchronization.duplicate.title=Duplicate use
 dialog.synchronization.duplicate.use=This profile is used by the following folders:
 dialog.synchronization.receive_changes=Receive changes
@@ -414,6 +412,8 @@ folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
 folderpanel.settingstab.addbutton.description=Add a pattern to exclude files from synchronization
 folderpanel.settingstab.addbutton.key=A
 folderpanel.settingstab.addbutton.name=Add
+folderpanel.settingstab.add_patterns.text_1=The following ignore patterns will be added
+folderpanel.settingstab.add_patterns.title=Add ignore pattern
 folderpanel.settingstab.choose_sync_profile=Choose synchronization profile
 folderpanel.settingstab.edit_a_pattern.text=Edit a pattern to exclude files from synchronization
 folderpanel.settingstab.edit_a_pattern.title=Edit ignore pattern
@@ -502,6 +502,8 @@ general.member=Member
 general.message=Message
 general.minutes=Minute(s)
 general.monday=Monday
+general.more=More
+general.more.lower_case=more
 general.neverAskAgain=Never ask this again
 general.notavailable=not available
 general.notfound=not found
