--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -19,6 +19,12 @@
 # http://www.powerfolder.com
 #
 
+pro.process_order.description=
+pro.process_order.key=O
+pro.process_order.name=Process order
+
+folder_leave.dialog.remove_from_os=Remove from Online Storage
+
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
