#778 - use profileId to get true translated names for presets.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1024,6 +1024,7 @@ syncprofile.autodownload_friends.name=Auto-download friends
 syncprofile.backupsource.name=Backup (Source)
 syncprofile.backuptarget.name=Backup (Target)
 syncprofile.custom.name=Custom profile
+syncprofile.disabled.name=Disabled
 syncprofile.manualdownload.name=Hosting (Manual download)
 syncprofile.no_sync.name=No synchronization
 syncprofile.projectwork.name=Project work (Manual sync)
