Customer branding support

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -1,5 +1,8 @@
 # this file contains the images used in buttons
 
+#customer_small.icon=icons/Autofusion_small.png
+#customer_big.icon=icons/Autofusion_big.png
+
 small_logo.icon=icons/PowerFolder_32x32.gif
 startdownloads.icon=icons/Play.gif
 abortdownload.icon=icons/Abort.gif
