--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -19,6 +19,10 @@
 # http://www.powerfolder.com
 #
 
+setup.description=Sets up new or joins existing PowerFolders
+setup.key=s
+setup.name=Setup
+
 pro.process_order.description=
 pro.process_order.key=O
 pro.process_order.name=Process order
@@ -1139,7 +1143,6 @@ wizard.control.next.description=Go to next wizard step
 wizard.create_folder.failed=Failed to create PowerFolder.
 wizard.create_folder.title=Creating PowerFolder
 wizard.create_folder.working=Creating PowerFolder, please wait.
-wizard.description=Opens wizard
 wizard.filesharing.sharedsuccess=You successfully shared a new folder\!\nOther users may join now
 wizard.folder_invitation.intro=You have received an invitation from {0}
 wizard.folder_invitation.title=Folder Invitation
@@ -1147,13 +1150,11 @@ wizard.host_panel.folder_host_success=You successfully set up a host folder\!\n
 wizard.host_panel.pcsjoin=Other computers can join this folder now
 wizard.host_panel.select=Please select the directory which should be the host
 wizard.invite.selectlocaldirectory=Please select local target directory for the files
-wizard.key=w
 wizard.loadinvitation.addtofriends=Add {0} to friends
 wizard.loadinvitation.choosefile=Choose the invitation file
 wizard.loadinvitation.select=Select invitation file
 wizard.loadinvitation.selectfile=Please select invitation file
 wizard.loadinvitation.title=Load invitation
-wizard.name=Wizard
 wizard.pfwizard.title=Wizard
 wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
 wizard.project_panel.select=Please select the project directory
