#880 - Rename Leave Folder to Remove Folder

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -52,7 +52,7 @@ search_user.icon=icons/toolbar/SearchUser-48.png
 buypro.icon=icons/toolbar/BuyPro-48.png
 new_folder.icon=icons/toolbar/NewFolder-48.png
 join_folder.icon=icons/toolbar/JoinFolder-48.png
-leave_folder.icon=icons/toolbar/LeaveFolder-48.png
+remove_folder.icon=icons/toolbar/LeaveFolder-48.png
 preferences.icon=icons/toolbar/Preferences-48.png
 about.icon=icons/toolbar/About-48.png
 sleep.icon=icons/toolbar/Sleep-48.png
@@ -169,7 +169,6 @@ sync_100.icon=icons/sync/Sync_0100.png
 sync_unknown.icon=icons/sync/Sync_unknown.png
 
 # crappy button icons that don't make sense removed (for now)
-folder_leave.icon=
 requestnetfolderlist.icon=
 previewfiles.icon=
 folderjoin.icon=
