--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -27,8 +27,6 @@ pro.process_order.description=
 pro.process_order.key=O
 pro.process_order.name=Process order
 
-folder_leave.dialog.remove_from_os=Remove from Online Storage
-
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
@@ -323,17 +321,6 @@ folder.members.synchronisation_panel.title=Member Sync Status
 
 folder_create.progress.text=Creating PowerFolder '{0}'
 
-folder_leave.button.key=L
-folder_leave.button.name=Leave
-folder_leave.description=Leave this PowerFolder
-folder_leave.dialog.delete=Delete meta-data
-folder_leave.dialog.preview=Convert to preview
-folder_leave.dialog.sync_warning=The PowerFolder is currently synchronizing\!
-folder_leave.dialog.text=Leave PowerFolder {0}?
-folder_leave.dialog.title=Leave PowerFolder {0}?
-folder_leave.key=L
-folder_leave.name=Leave Folder
-
 foldercreate.description=Creates a new PowerFolder
 foldercreate.dialog.backupbyonlinestorage=Backup by Online Storage
 foldercreate.dialog.backuperror.text=Unable to setup the Online Storage to backup the PowerFolder
@@ -445,6 +432,20 @@ folderrepository.preview_folder.text=Folder {0} is a preview folder.\n\nWhat wou
 folderrepository.preview_folder.title=Preview Folder
 folderrepository.warnonclose.text=These folders are not synchronized yet\:\n\n\n\n{0}\n\n\nContinue Exit?
 folderrepository.warnonclose.title=Continue Exit?
+
+folder_remove.key=R
+folder_remove.name=Remove Folder
+folder_remove.description=Remove this PowerFolder
+
+folder_remove.dialog.text=Remove PowerFolder {0}?
+folder_remove.dialog.title=Remove PowerFolder {0}?
+folder_remove.dialog.sync_warning=The PowerFolder is currently synchronizing\!
+folder_remove.dialog.delete=Delete meta-data
+folder_remove.dialog.preview=Convert to preview
+folder_remove.dialog.remove_from_os=Remove from Online Storage
+folder_remove.dialog.button.key=R
+folder_remove.dialog.button.name=Remove
+
 
 freelimitdialog.buypro=Buy PowerFolder Pro
 freelimitdialog.buyrecommendation=It is required that you upgrade to the Pro Version or reduce your usage.
