430 - Completed uploads handling.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -887,6 +887,7 @@ quickinfo.root.offline=Offline
 quickinfo.root.syncing=Sync in progress...
 quickinfo.root.title=Welcome to PowerFolder\!
 quickinfo.upload.active={0} active upload(s)
+quickinfo.upload.completed={0} upload(s) recently completed
 quickinfo.upload.title=Upload Status
 quickinfo.user.isconnectedinet=Is on the Internet
 quickinfo.user.isconnectedlan=Is on LAN
