--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -328,6 +328,7 @@ foldercreate.dialog.backuperror.title=Unable to backup PowerFolder
 foldercreate.dialog.create_desktop_shortcut=Create desktop shortcut
 foldercreate.dialog.saveinvitation=Save an invitation in the PowerFolder
 foldercreate.dialog.sendinvitation=Send invitations afterwards
+foldercreate.dialog.select_file.text=Select file
 foldercreate.dialog.settings=Enter the settings for the new PowerFolder
 foldercreate.dialog.title=Create new PowerFolder
 foldercreate.dirempty.text=Base directory of PowerFolder should not be empty
@@ -395,6 +396,7 @@ folderpanel.hometab.number_of_available_files_at_other_members=Number of availab
 folderpanel.hometab.number_of_local_files_in_folder=Number of local files in folder
 folderpanel.hometab.public_folder=Public
 folderpanel.hometab.secret_folder=Secret
+folderpanel.hometab.select_directory.text=Select folder location
 folderpanel.hometab.synchronisation_eta=Synchronization ETA
 folderpanel.hometab.synchronisation_percentage=Synchronization percentage
 folderpanel.hometab.title=Home
@@ -970,6 +972,7 @@ searchfriends.name=Search
 send_invitation.example_email_address=email@domain.com
 send_invitation.multi_users=Multiple users selected
 send_invitation.no_users=No users selected
+send_invitation.select_user.text=Select user
 
 sendinvitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
 sendinvitation.allFolders.title={0} already on all folders
