--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -7,6 +7,7 @@ small_logo.icon=icons/PowerFolder_32x32.gif
 startdownloads.icon=icons/Play.gif
 abortdownload.icon=icons/Abort.gif
 clearcompleteddownloads.icon=icons/Clear.gif
+clear_completed_uploads.icon=icons/Clear.gif
 clearrecentdownloads.icon=icons/Clear.gif
 #connect.icon=icons/Connect.gif
 #disablesilentmode.icon=icons/ScansDisabled.gif
