--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -110,6 +110,10 @@ clearcompleteddownloads.description=Clears the list of the recently completed do
 clearcompleteddownloads.key=c
 clearcompleteddownloads.name=Cleanup
 
+clear_completed_uploads.description=Clears the list of the recently completed uploads (Alt-3)
+clear_completed_uploads.key=c
+clear_completed_uploads.name=Cleanup
+
 connect.description=Manually connects to a PowerFolder user
 connect.dialog.text=Please enter the hostname or ip of the user you want to connect.\n\nPowerFolder automatically connects to the network after a short time,\nuse this option if you want to manually connect to a user.\n
 connect.dialog.title=Manually connect to a PowerFolder user
@@ -1098,6 +1102,9 @@ transfers.verifying=Finalizing
 unignorefile.description=File(s) will be downloaded/shared again
 unignorefile.key=R
 unignorefile.name=Remove from Ignore pattens
+
+upload_panel.auto_cleanup.description=Cleans up any uploads when they complete
+upload_panel.auto_cleanup.name=Auto-cleanup
 
 sync_folder_rights.name=Preview all folders
 sync_folder_rights.key=S
