General problem with transfer

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1082,6 +1082,7 @@ transfer.problem.temp.file.open=Unable to create/open tempfile
 transfer.problem.temp.file.write=Unable to write to tempfile
 transfer.problem.title=File Transfer Problem
 transfer.problem.transfer.exception=There was a TransferException\: {0}
+transfer.problem.transfer.broken=Transfer broken
 
 transfers.completed=Completed
 transfers.copying=Copying data
