#538 - standard wizard improvements in PFWizardPanel.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -680,6 +680,9 @@ onlinelabel.offline.text=You are offline. Not connected to any user on the Power
 onlinelabel.online=Online
 onlinelabel.online.text=You are online
 
+online_storage.account_data=Unable to login. Are account details correct?
+online_storage.general_error=There was an error logging in: ({0}).
+
 open_local_folder.description=Opens folder in your operating systems file explorer
 open_local_folder.key=F
 open_local_folder.name=Open Folder
@@ -1198,10 +1201,10 @@ wizard.successjoin=You have successfully joined the folder\!
 wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
 wizard.syncpcspanel.pcsjoin=Other computers can join this folder now
 wizard.syncpcspanel.select=Please select the directory which should be mirrored
-wizard.webservice.enteraccount=Please enter your account data to login to the Online Storage
-wizard.webservice.learnmore=What is the PowerFolder Online Storage?
+wizard.webservice.enteraccount=Please enter your account details to login to Online Storage
+wizard.webservice.learnmore=What is PowerFolder Online Storage?
 wizard.webservice.login=Online Storage Login
-wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by the PowerFolder Online Storage
+wizard.webservice.mirrorchoosefolder=Choose a folder to be backed up by PowerFolder Online Storage
 wizard.webservice.mirrorsetup=Backup Folder by Online Storage
 wizard.webservice.password=Password
 wizard.webservice.register=Register New Account
