--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -503,7 +503,7 @@ general.folder.public=Public (visible for all)
 general.folder.secret=Private (requires invitation)
 general.foldername=Name
 general.friday=Friday
-general.friendlist=Friend list
+general.friendlist=Friend List
 general.from=from
 general.help=help
 general.hide=hide
@@ -1131,7 +1131,7 @@ user.dir.recent_documents=Recent Documents
 user.dir.videos=Videos
 
 winutils.shortcut.description=This shortcut was placed here by PowerFolder
-
+                                                                                    Fri
 wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
 wizard.backup_panel.pcsjoin=Other computers can join this folder now
 wizard.backup_panel.select=Please select the directory which should be backed up
