#928 - Add hide previews cb and menu item.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -554,6 +554,10 @@ hideoffline.description=The offline users will be filtered from this search resu
 hideoffline.key=H
 hideoffline.name=Hide offline users
 
+hide_preview.description=Preview folders will be removed from lists of folders
+hide_preview.key=H
+hide_preview.name=Hide Preview Folders
+
 ignorefile.description=File(s) will not be downloaded/shared
 ignorefile.key=I
 ignorefile.name=Add File to Ignore patterns
@@ -635,6 +639,8 @@ myfolderstable.number_of_members={0} members
 myfolderstable.sync=Sync
 myfolderstable.syncprofile=Sync Profile
 myfolderstable.total_size=Total Size
+
+my_folders_panel.hide_previews=Hide preview folders
 
 navigationbuttons.back=Back
 navigationbuttons.back_to=Back to {0}
@@ -1012,6 +1018,10 @@ showfileinfo.name=File Properties
 showhidefiledetails.description=Shows/Hides detailed information about the selected file (Alt-4)
 showhidefiledetails.key=d
 showhidefiledetails.name=Details
+
+show_preview.description=Preview folders will be visible in lists of folders
+show_preview.key=S
+show_preview.name=Show Preview Folders
 
 splash.version=Version {0}
 
