#844 - move find friends into a dialog.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -314,6 +314,14 @@ findfriends.description=Start searching for new friends
 findfriends.key=F
 findfriends.name=Find Users
 
+find_users_dialog.title=Find users
+
+find_users_panel.user_name=User name
+
+find_users_panel.search_action.name=Search
+find_users_panel.search_action.key=S
+find_users_panel.search_action.description=Search for a user
+
 folder.check_path_length.text=The combined length of the path to the file and the filename is more than 255 characters.\nThis is not recommended since this may not work on other Operating systems like Windows 2000.\n\nFolder\: {0}\nFile\: {1}
 folder.check_path_length.title=Path maybe to long
 folder.check_subdirectory_and_filename_length.text=The filename or a (sub)directory name is longer than 30 characters.\nThis is not recommended since this may not work on other operating systems like Mac OS classic.\n\nFolder\: {0}\nFile\: {1}
@@ -468,7 +476,6 @@ friend.search.personal.message.text2=You may include a personal message for {0}
 friend.search.personal.message.title=Add friend message
 
 friendsearch.no_user_found=No users found
-friendsearch.nodetable.hostname=Hostname
 friendsearch.nodetable.ip=IP
 friendsearch.nodetable.last_seen_online=Last seen online
 friendsearch.nodetable.name=Name
@@ -477,8 +484,6 @@ friendsearch.nodetable.on_local_network=On LAN
 friendspanel.connected=Connected
 friendspanel.currently_online=Currently online
 friendspanel.n_a=n/a
-friendspanel.search_for_user=Search for user
-friendspanel.search_results=Search results
 friendspanel.unable_to_connect=Currently online (Unable to connect)
 
 general.accept=Accept
@@ -524,7 +529,6 @@ general.more.lower_case=more
 general.neverAskAgain=Never ask this again
 general.notavailable=not available
 general.notfound=not found
-general.notonfriends=Find Users
 general.ok=OK
 general.ok.key=O
 general.overwrite=Overwrite
@@ -883,7 +887,6 @@ quickinfo.folder.number_of_files_and_size={0} File(s), {1}
 quickinfo.folder.preview=Preview - No synchronization
 quickinfo.folder.status_of_folder=Status of {0}
 quickinfo.friends.online={0} of {1} friend(s) are online
-quickinfo.friends.title=Find Users
 quickinfo.friends.usersfound={0} users found
 quickinfo.myfolders.folders={0} in {1} folder(s)
 quickinfo.myfolders.insyncall=All folders are synchronized
@@ -977,10 +980,6 @@ scanallfolders.name=Sync Folders
 scanfolder.description=Checks folder for file changes now (Alt-1)
 scanfolder.key=s
 scanfolder.name=Sync Now
-
-searchfriends.description=Search a friend
-searchfriends.key=S
-searchfriends.name=Search
 
 send_invitation.example_email_address=email@domain.com
 send_invitation.multi_users=Multiple users selected
