#379 - SelectInvitationPanel for invitations by user

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -981,6 +981,11 @@ scanfolder.description=Checks folder for file changes now (Alt-1)
 scanfolder.key=s
 scanfolder.name=Sync Now
 
+select_invitation.text1=Invitation files are required to join a folder.
+select_invitation.text2=Never give out invitation files to untrusted people.
+select_invitation.message_text=Enter a message for the receiver
+select_invitation.folder_text=Select folder to send invitation for
+
 send_invitation.example_email_address=email@domain.com
 send_invitation.multi_users=Multiple users selected
 send_invitation.no_users=No users selected
@@ -1001,8 +1006,6 @@ sendinvitation.placetostore=Choose a place to store invitation
 sendinvitation.subject=Invitation to the PowerFolder '{0}'
 sendinvitation.toclipboard=To clipboard...
 sendinvitation.todisk=To disk...
-sendinvitation.user.text=Select the folder you want {0} invite to
-sendinvitation.user.title=Invite {0} to a folder
 
 setmasternode.description=Selects the administration user for your friend list. Friend list loaded from adminitrator
 setmasternode.dialog.text=Select the administrator for your friend list
