#954 - Add warning for non windows systems.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -611,6 +611,7 @@ lowmemory.do_nothing=Do Nothing
 lowmemory.dont_autodetect=Do not detect low memory
 lowmemory.increase=Increase Memory
 lowmemory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
+lowmemory.warn=PowerFolder is running out of available memory.\n\nPlease visit http://wiki.powerfolder.com/wiki/ for advice on incresing available memory.
 lowmemory.title=Low memory
 
 masternode.nobody=- nobody -
