--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -19,6 +19,8 @@
 # http://www.powerfolder.com
 #
 
+pro.download_csv.name=Download as CSV
+
 setup.description=Sets up new or joins existing PowerFolders
 setup.key=s
 setup.name=Setup
