#844 - add Include LAN users logic for friends panel

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -556,7 +556,7 @@ general.wednesday=Wednesday
 general.what_is_this=What is this?
 general.yesterday=yesterday
 
-hideoffline.description=The offline users will be filtered from this search result
+hideoffline.description=Offline users will be filtered from this search result
 hideoffline.key=H
 hideoffline.name=Hide offline users
 
@@ -570,6 +570,10 @@ ignorefile.name=Add File to Ignore patterns
 
 imagefileinfo.resolution=Resolution
 imagefileinfo.unknown=Unknown
+
+include_lan.description=All LAN users will be included in this search result
+include_lan.key=I
+include_lan.name=Include LAN users
 
 infoside.title=Information
 
