#24 - add star icon for recent files

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -63,6 +63,8 @@ sort_up.icon=icons/SortUp.gif
 sort_down.icon=icons/SortDown.gif
 sort_blank.icon=icons/SortBlank.gif
 
+star.icon=icons/Star.gif
+
 # Sync icons for FolderQuickInfoPanel
 sync_0.icon=icons/sync/Sync_0000.png
 sync_1.icon=icons/sync/Sync_0001.png
