--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -650,6 +650,7 @@ myfolderstable.number_of_members={0} members
 myfolderstable.sync=Sync
 myfolderstable.syncprofile=Sync Profile
 myfolderstable.total_size=Total Size
+myfolderstable.new_files=New Files
 
 my_folders_panel.hide_previews=Hide preview folders
 
