#26 - work in progress...

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -63,7 +63,7 @@ sort_up.icon=icons/SortUp.gif
 sort_down.icon=icons/SortDown.gif
 sort_blank.icon=icons/SortBlank.gif
 
-star.icon=icons/Star.gif
+directory_new.icon=icons/Directory_new.gif
 
 # Sync icons for FolderQuickInfoPanel
 sync_0.icon=icons/sync/Sync_0000.png
