--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -418,6 +418,8 @@ folderpanel.hometab.total_size=Total size
 folderpanel.hometab.working.description=The folder is being moved
 folderpanel.hometab.working.title=Moving folder
 folderpanel.members.key=M
+folderpanel.new_files.key=N
+folderpanel.new_files_tab.title=New Files
 folderpanel.settings.key=S
 folderpanel.settingstab.add_a_pattern.example=example/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Enter a pattern to exclude files from synchronization
