#905 - change syncronizeing folder text

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -898,9 +898,9 @@ quickinfo.folder.preview=Preview - No synchronization
 quickinfo.folder.status_of_folder=Status of {0}
 quickinfo.friends.online={0} of {1} friend(s) are online
 quickinfo.friends.usersfound={0} users found
-quickinfo.myfolders.folders={0} in {1} folder(s)
-quickinfo.myfolders.insyncall=All folders are synchronized
-quickinfo.myfolders.syncing=Synchronizing {0}
+quickinfo.myfolders.powerfolders={0} in {1} PowerFolder(s)
+quickinfo.myfolders.in_sync_all=All PowerFolders are synchronized
+quickinfo.myfolders.syncing=Synchronizing {0} PowerFolder(s)
 quickinfo.myfolders.title=Status of my PowerFolders
 quickinfo.previewfolders.folders={0} in {1} folder(s)
 quickinfo.previewfolders.nosync=Preview folders are not synchronized
