--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -97,9 +97,9 @@ buypro.name=Buy Pro
 change.friend.personal.message.text=You may include a personal message for {0}
 change.friend.personal.message.title=Add friend message
 
-chat.notification.option1=Answer
-chat.notification.option2=Close
-chat.notification.subtitle=<html><b>PowerFolder</b><br>New chat message\:</html>
+chat.notification.title=Chat Message Received
+chat.notification.message=You have received a chat message.
+chat.notification.member_message=You have received a chat message from {0}.
 
 chatpanel.cannot_deliver=message can not be delivered because '{0}' is not connected
 chatpanel.chat_with=Chat with
@@ -582,6 +582,9 @@ infoside.title=Information
 invitation.utils.unable.write.text=Error while writing invitation, please try again.
 invitation.utils.unable.write.title=Unable to write invitation
 
+invite_received_handler.notify.title=Invitation Received
+invite_received_handler.notify.message=You have received a PowerFolder invitation from {0}.
+
 invitationfiles.description=PowerFolder invitations
 
 joinfolder.already_joined_text=You are already a member of folder {0}
@@ -681,6 +684,11 @@ networkstatisticspanel.reconnection_queue_size=Nodes in reconnection queue
 
 nodeinfo.error=Unable to request node information
 nodeinfo.requesting=Requesting node information...
+
+notification_handler.display.text=Display
+notification_handler.ignore.text=Ignore
+
+notification_form.title=<html><b>PowerFolder</b><br>{0}</html>
 
 onepublicfolderpanel.estimated_size_in_files=Estimated size\: {0} files ({1})
 onepublicfolderpanel.file_list_not_found=File list not found
