#825 - activity visualizer for cleaning up downloads.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -229,6 +229,8 @@ disablesilentmode.name=Wakeup\!
 
 download_panel.auto_cleanup.description=Cleans up any downloads when they complete
 download_panel.auto_cleanup.name=Auto-cleanup
+downloads_panel.cleanup_activity.title=Cleaning up
+downloads_panel.cleanup_activity.description=Cleaning up old downloads
 
 downloadfile.description=Download selected file(s) (or files in directory). Deleted files will be re-downloaded
 downloadfile.failed.sourcenotfound=Unable to download file {0}, source not found
