--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -911,10 +911,7 @@ quickinfo.friends.usersfound={0} users found
 quickinfo.myfolders.powerfolders={0} in {1} PowerFolder(s)
 quickinfo.myfolders.in_sync_all=All PowerFolders are synchronized
 quickinfo.myfolders.syncing=Synchronizing {0} PowerFolder(s)
-quickinfo.myfolders.title=Status of my PowerFolders
-quickinfo.previewfolders.folders={0} in {1} folder(s)
-quickinfo.previewfolders.nosync=Preview folders are not synchronized
-quickinfo.previewfolders.title=Status of Preview Folders
+quickinfo.myfolders.title=Status of My PowerFolders
 quickinfo.recylcebin.files={0} file(s) in Recycle Bin
 quickinfo.recylcebin.title=Recycle Bin
 quickinfo.root.downloads={0} download(s) recently completed
