#821 - add last file change date to folder.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -409,6 +409,7 @@ folderpanel.hometab.move_error.other_temp=There was an error moving the folder\:
 folderpanel.hometab.move_error.temp=Could not create temporary folder
 folderpanel.hometab.move_error.title=Error moving folder contents
 folderpanel.hometab.number_of_available_files_at_other_members=Number of available files at other members
+folderpanel.hometab.last_file_change_date=Date of last file change
 folderpanel.hometab.number_of_local_files_in_folder=Number of local files in folder
 folderpanel.hometab.public_folder=Public
 folderpanel.hometab.secret_folder=Secret
@@ -552,13 +553,13 @@ general.sunday=Sunday
 general.synchonisation=Synchronization
 general.thursday=Thursday
 general.time=%02d\:%02d\:%02d
-general.today=today
+general.today=Today
 general.tuesday=Tuesday
 general.uploads=Uploads
 general.webservice=Online Storage
 general.wednesday=Wednesday
 general.what_is_this=What is this?
-general.yesterday=yesterday
+general.yesterday=Yesterday
 
 hideoffline.description=Offline users will be filtered from this search result
 hideoffline.key=H
