--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -90,6 +90,10 @@ apps.dir.outlook=Outlook
 apps.dir.sunbird=Sunbird
 apps.dir.thunderbird=Thunderbird
 
+black_list.description=File(s) will not be downloaded/shared
+black_list.key=B
+black_list.name=Add file to blacklist
+
 buypro.description=Upgrade to PowerFolder Pro now
 buypro.key=B
 buypro.name=Buy Pro
@@ -568,10 +572,6 @@ hideoffline.name=Hide offline users
 hide_preview.description=Preview folders will be removed from lists of folders
 hide_preview.key=H
 hide_preview.name=Hide Preview Folders
-
-ignorefile.description=File(s) will not be downloaded/shared
-ignorefile.key=I
-ignorefile.name=Add File to Ignore patterns
 
 imagefileinfo.resolution=Resolution
 imagefileinfo.unknown=Unknown
@@ -1133,9 +1133,13 @@ transfers.searching=Searching...
 transfers.to=To
 transfers.verifying=Finalizing
 
-unignorefile.description=File(s) will be downloaded/shared again
-unignorefile.key=R
-unignorefile.name=Remove from Ignore pattens
+un_black_list.description=Files will be removed from blacklist patterns
+un_black_list.key=R
+un_black_list.name=Remove from blacklist
+
+un_white_list.description=Files will be removed from whitelist patterns
+un_white_list.key=R
+un_white_list.name=Remove from whitelist
 
 upload_panel.auto_cleanup.description=Cleans up any uploads when they complete
 upload_panel.auto_cleanup.name=Auto-cleanup
@@ -1159,6 +1163,10 @@ user.dir.my_videos=My Videos
 user.dir.pictures=Pictures
 user.dir.recent_documents=Recent Documents
 user.dir.videos=Videos
+
+white_list.description=File(s) will be downloaded/shared
+white_list.key=W
+white_list.name=Add file to whitelist
 
 winutils.shortcut.description=This shortcut was placed here by PowerFolder
                                                                                     Fri
