#844 - better cb text

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -578,7 +578,7 @@ imagefileinfo.unknown=Unknown
 
 include_lan.description=All LAN users will be included in this search result
 include_lan.key=I
-include_lan.name=Include LAN users
+include_lan.name=Include other LAN computers
 
 infoside.title=Information
 
