--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -90,9 +90,9 @@ apps.dir.outlook=Outlook
 apps.dir.sunbird=Sunbird
 apps.dir.thunderbird=Thunderbird
 
-black_list.description=File(s) will not be downloaded/shared
-black_list.key=B
-black_list.name=Add file to blacklist
+black_list.description=Adds a file definition to the ignore patterns
+black_list.key=I
+black_list.name=Add to ignore patterns
 
 buypro.description=Upgrade to PowerFolder Pro now
 buypro.key=B
@@ -443,11 +443,15 @@ folderpanel.settingstab.editbutton.description=Edit a pattern
 folderpanel.settingstab.editbutton.key=E
 folderpanel.settingstab.editbutton.name=Edit
 folderpanel.settingstab.ignorepatterns=Ignore patterns
+folderpanel.settingstab.ignore_pattern_type=Ignore pattern type
 folderpanel.settingstab.removebutton.description=Remove a pattern
 folderpanel.settingstab.removebutton.key=R
 folderpanel.settingstab.removebutton.name=Remove
 folderpanel.settingstab.title=Settings
 folderpanel.settingstab.userecyclebin=Use recycle bin
+
+folderpanel.settingstab.white_list.title=Whitelist
+folderpanel.settingstab.white_list.message=Only files matching whitelist patterns will be synchronized.
 
 folderrepository.continue_previewing=Continue Previewing
 folderrepository.join_folder=Join Folder
@@ -1133,13 +1137,13 @@ transfers.searching=Searching...
 transfers.to=To
 transfers.verifying=Finalizing
 
-un_black_list.description=Files will be removed from blacklist patterns
+un_black_list.description=Removes a file definition to the ignore patterns
 un_black_list.key=R
-un_black_list.name=Remove from blacklist
+un_black_list.name=Remove from ignore patterns
 
-un_white_list.description=Files will be removed from whitelist patterns
+un_white_list.description=Removes a file definition to the ignore patterns
 un_white_list.key=R
-un_white_list.name=Remove from whitelist
+un_white_list.name=Remove from ignore patterns
 
 upload_panel.auto_cleanup.description=Cleans up any uploads when they complete
 upload_panel.auto_cleanup.name=Auto-cleanup
@@ -1164,9 +1168,9 @@ user.dir.pictures=Pictures
 user.dir.recent_documents=Recent Documents
 user.dir.videos=Videos
 
-white_list.description=File(s) will be downloaded/shared
-white_list.key=W
-white_list.name=Add file to whitelist
+white_list.description=Adds a file definition to the ignore patterns
+white_list.key=I
+white_list.name=Add to ignore patterns
 
 winutils.shortcut.description=This shortcut was placed here by PowerFolder
                                                                                     Fri
