#1006 - Clean up button for new files

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -689,6 +689,9 @@ networkstatisticspanel.public_folder_count=Number of public folders (not joined)
 networkstatisticspanel.public_folders_size=Total size of all available files
 networkstatisticspanel.reconnection_queue_size=Nodes in reconnection queue
 
+new_files_tab.cleanup_activity.title=Cleaning up
+new_files_tab.cleanup_activity.description=Cleaning up old files
+
 nodeinfo.error=Unable to request node information
 nodeinfo.requesting=Requesting node information...
 
