#953 - add directory size to locator.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1189,6 +1189,8 @@ wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited
 wizard.basicsetup.upload.title=Unlimited connection speed
 wizard.choose_location.select=Please select the directory
 wizard.choosedisklocation.select=Select directory
+wizard.choosedisklocation.calculating_directory_size=Calculating size of directory...
+wizard.choosedisklocation.directory_size=Directory size {0}
 wizard.choosedisklocation.title=Disk location
 wizard.control.back=< Back
 wizard.control.back.description=Go to previous wizard step
