Incomplete - # 998: Offer possibility to give download priorities to selected files. http://dev.powerfolder.com/projects/powerfolder/ticket/998
- Added fileset for running tests themselves

--- a/build.xml
+++ b/build.xml
@@ -235,6 +235,7 @@ For creation of the installer:
 			<classpath>
 				<pathelement location="${build.dir}" />
 				<fileset refid="libs" />
+				<fileset refid="testlibs" />
 			</classpath>
 
 			<formatter type="xml" />
