#906 - add up to date estimate to FolderQuickInfoPanel

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -911,6 +911,7 @@ quickinfo.folder.disconnected=No other computer connected
 quickinfo.folder.downloads_recently_completed={0} Downloads recently completed
 quickinfo.folder.is_in_sync=Folder is in sync
 quickinfo.folder.is_synchronizing=Folder is synchronizing...
+quickinfo.folder.up_to_date_in=Up to date in {0}
 quickinfo.folder.number_of_files_and_size={0} File(s), {1}
 quickinfo.folder.preview=Preview - No synchronization
 quickinfo.folder.status_of_folder=Status of {0}
